--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.49.1
-scikit-learn==1.4.2
-gensim==4.3.3
-transformers==4.56.1
-numpy==1.26.4
-scipy==1.13.0
+scikit-learn==1.3.2
+gensim==4.3.2
+transformers==4.35.2
+torch==2.1.0
+numpy==1.24.4
+scipy==1.11.4
