--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-streamlit==1.49.1
-scikit-learn==1.3.2
-gensim==4.3.2
-transformers==4.35.2
-torch==2.1.0
-numpy==1.24.4
-scipy==1.11.4
+gensim
+transformers
+torch
+numpy
+scipy
+streamlit
+scikit-learn
+pandas
+plotly
+graphviz
+pydotplus
